Add GC section.